// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TuningPage BuyButton Component should render best offer 1`] = `
<div
  className={
    BemNamingEntity {
      "entity": Object {
        "block": "buy-button",
      },
      "entityMixes": Array [],
      "entityMods": Object {
        "best-offer": true,
        "with-ya-plus": undefined,
      },
      "naming": Object {
        "stringify": [Function],
      },
    }
  }
>
  <Button
    className={
      BemNamingEntity {
        "entity": Object {
          "block": "buy-button",
          "elem": "button",
        },
        "entityMixes": Array [],
        "entityMods": Object {},
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
    onClick={[Function]}
    size="l"
    view="default"
    width="max"
  >
    <span
      className={
        BemNamingEntity {
          "entity": Object {
            "block": "buy-button",
            "elem": "button-text-best-offer",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
      key="button-text-best-offer"
    >
      Самое выгодное предложение
    </span>
    <div
      className={
        BemNamingEntity {
          "entity": Object {
            "block": "buy-button",
            "elem": "button-text",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
      key="button-text"
    >
      <div
        className={
          BemNamingEntity {
            "entity": Object {
              "block": "buy-button",
              "elem": "button-text-content",
            },
            "entityMixes": Array [],
            "entityMods": Object {},
            "naming": Object {
              "stringify": [Function],
            },
          }
        }
      >
        <span
          className={
            BemNamingEntity {
              "entity": Object {
                "block": "buy-button",
                "elem": "button-text-content-main",
              },
              "entityMixes": Array [],
              "entityMods": Object {},
              "naming": Object {
                "stringify": [Function],
              },
            }
          }
        >
          146 ₽/месяц
        </span>
        <span
          className={
            BemNamingEntity {
              "entity": Object {
                "block": "buy-button",
                "elem": "button-text-content-secondary",
              },
              "entityMixes": Array [],
              "entityMods": Object {},
              "naming": Object {
                "stringify": [Function],
              },
            }
          }
        >
          При оплате подписки за год
        </span>
      </div>
    </div>
  </Button>
</div>
`;

exports[`TuningPage BuyButton Component should render default 1`] = `
<div
  className={
    BemNamingEntity {
      "entity": Object {
        "block": "buy-button",
      },
      "entityMixes": Array [],
      "entityMods": Object {
        "best-offer": undefined,
        "with-ya-plus": undefined,
      },
      "naming": Object {
        "stringify": [Function],
      },
    }
  }
>
  <Button
    className={
      BemNamingEntity {
        "entity": Object {
          "block": "buy-button",
          "elem": "button",
        },
        "entityMixes": Array [],
        "entityMods": Object {},
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
    onClick={[Function]}
    size="l"
    view="default"
    width="max"
  >
    <div
      className={
        BemNamingEntity {
          "entity": Object {
            "block": "buy-button",
            "elem": "button-text",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
      key="button-text"
    >
      <div
        className={
          BemNamingEntity {
            "entity": Object {
              "block": "buy-button",
              "elem": "button-text-content",
            },
            "entityMixes": Array [],
            "entityMods": Object {},
            "naming": Object {
              "stringify": [Function],
            },
          }
        }
      >
        <span
          className={
            BemNamingEntity {
              "entity": Object {
                "block": "buy-button",
                "elem": "button-text-content-main",
              },
              "entityMixes": Array [],
              "entityMods": Object {},
              "naming": Object {
                "stringify": [Function],
              },
            }
          }
        >
          82 ₽/месяц
        </span>
        <span
          className={
            BemNamingEntity {
              "entity": Object {
                "block": "buy-button",
                "elem": "button-text-content-secondary",
              },
              "entityMixes": Array [],
              "entityMods": Object {},
              "naming": Object {
                "stringify": [Function],
              },
            }
          }
        >
          При оплате подписки за год
        </span>
      </div>
    </div>
  </Button>
</div>
`;

exports[`TuningPage BuyButton Component should render with ya plus 1`] = `
<div
  className={
    BemNamingEntity {
      "entity": Object {
        "block": "buy-button",
      },
      "entityMixes": Array [],
      "entityMods": Object {
        "best-offer": undefined,
        "with-ya-plus": true,
      },
      "naming": Object {
        "stringify": [Function],
      },
    }
  }
>
  <Button
    className={
      BemNamingEntity {
        "entity": Object {
          "block": "buy-button",
          "elem": "button",
        },
        "entityMixes": Array [],
        "entityMods": Object {},
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
    onClick={[Function]}
    size="l"
    view="default"
    width="max"
  >
    <div
      className={
        BemNamingEntity {
          "entity": Object {
            "block": "buy-button",
            "elem": "button-text",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
      key="button-text"
    >
      <div
        className={
          BemNamingEntity {
            "entity": Object {
              "block": "buy-button",
              "elem": "button-text-content",
            },
            "entityMixes": Array [],
            "entityMods": Object {},
            "naming": Object {
              "stringify": [Function],
            },
          }
        }
      >
        <span
          className={
            BemNamingEntity {
              "entity": Object {
                "block": "buy-button",
                "elem": "button-text-content-main",
              },
              "entityMixes": Array [],
              "entityMods": Object {},
              "naming": Object {
                "stringify": [Function],
              },
            }
          }
        >
          437 ₽/месяц
        </span>
        <span
          className={
            BemNamingEntity {
              "entity": Object {
                "block": "buy-button",
                "elem": "button-text-content-secondary",
              },
              "entityMixes": Array [],
              "entityMods": Object {},
              "naming": Object {
                "stringify": [Function],
              },
            }
          }
        >
          При оплате подписки за год
        </span>
      </div>
    </div>
  </Button>
</div>
`;

exports[`TuningPage BuyLink Component should render best offer 1`] = `
<div
  className={
    BemNamingEntity {
      "entity": Object {
        "block": "buy-link",
      },
      "entityMixes": Array [],
      "entityMods": Object {
        "best-offer": true,
        "with-ya-plus": undefined,
      },
      "naming": Object {
        "stringify": [Function],
      },
    }
  }
>
  <Link
    className={
      BemNamingEntity {
        "entity": Object {
          "block": "buy-link",
          "elem": "link",
        },
        "entityMixes": Array [],
        "entityMods": Object {},
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
    onClick={[Function]}
    theme="black"
  >
    Подписаться за 210 ₽/‍месяц
  </Link>
</div>
`;

exports[`TuningPage BuyLink Component should render default 1`] = `
<div
  className={
    BemNamingEntity {
      "entity": Object {
        "block": "buy-link",
      },
      "entityMixes": Array [],
      "entityMods": Object {
        "best-offer": undefined,
        "with-ya-plus": undefined,
      },
      "naming": Object {
        "stringify": [Function],
      },
    }
  }
>
  <Link
    className={
      BemNamingEntity {
        "entity": Object {
          "block": "buy-link",
          "elem": "link",
        },
        "entityMixes": Array [],
        "entityMods": Object {},
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
    onClick={[Function]}
    theme="black"
  >
    Подписаться за 99 ₽/‍месяц
  </Link>
</div>
`;

exports[`TuningPage BuyLink Component should render with ya plus 1`] = `
<div
  className={
    BemNamingEntity {
      "entity": Object {
        "block": "buy-link",
      },
      "entityMixes": Array [],
      "entityMods": Object {
        "best-offer": undefined,
        "with-ya-plus": true,
      },
      "naming": Object {
        "stringify": [Function],
      },
    }
  }
>
  <Link
    className={
      BemNamingEntity {
        "entity": Object {
          "block": "buy-link",
          "elem": "link",
        },
        "entityMixes": Array [],
        "entityMods": Object {},
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
    onClick={[Function]}
    theme="black"
  >
    Подписаться за 750 ₽/‍месяц
  </Link>
</div>
`;

exports[`TuningPage Features Component should render features for non pro with ya plus tariff present 1`] = `
<div
  className={
    BemNamingEntity {
      "entity": Object {
        "block": "features",
      },
      "entityMixes": Array [
        undefined,
      ],
      "entityMods": Object {},
      "naming": Object {
        "stringify": [Function],
      },
    }
  }
>
  <div
    className={
      BemNamingEntity {
        "entity": Object {
          "block": "features",
          "elem": "feature",
        },
        "entityMixes": Array [],
        "entityMods": Object {},
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
    key="disk-pro-feature-0"
  >
    <icon
      iconSize="m"
      onClick={[Function]}
      role="none"
    />
    <div
      className={
        BemNamingEntity {
          "entity": Object {
            "block": "features",
            "elem": "feature-text",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
    >
      Безлимитная автозагрузка видео с телефона
    </div>
  </div>
  <div
    className={
      BemNamingEntity {
        "entity": Object {
          "block": "features",
          "elem": "feature",
        },
        "entityMixes": Array [],
        "entityMods": Object {},
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
    key="disk-pro-feature-1"
  >
    <icon
      iconSize="m"
      onClick={[Function]}
      role="none"
    />
    <div
      className={
        BemNamingEntity {
          "entity": Object {
            "block": "features",
            "elem": "feature-text",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
    >
      Расширенная история изменений файлов
    </div>
  </div>
  <div
    className={
      BemNamingEntity {
        "entity": Object {
          "block": "features",
          "elem": "feature",
        },
        "entityMixes": Array [],
        "entityMods": Object {},
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
    key="disk-pro-feature-2"
  >
    <icon
      iconSize="m"
      onClick={[Function]}
      role="none"
    />
    <div
      className={
        BemNamingEntity {
          "entity": Object {
            "block": "features",
            "elem": "feature-text",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
    >
      Без рекламы в Диске
    </div>
  </div>
  <div
    className={
      BemNamingEntity {
        "entity": Object {
          "block": "features",
          "elem": "feature",
        },
        "entityMixes": Array [],
        "entityMods": Object {},
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
    key="disk-pro-feature-3"
  >
    <icon
      iconSize="m"
      onClick={[Function]}
      role="none"
    />
    <div
      className={
        BemNamingEntity {
          "entity": Object {
            "block": "features",
            "elem": "feature-text",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
    >
      Автосохранение папок в программе для Windows
    </div>
  </div>
  <div
    className={
      BemNamingEntity {
        "entity": Object {
          "block": "features",
          "elem": "feature",
        },
        "entityMixes": Array [],
        "entityMods": Object {},
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
    key="disk-pro-feature-4"
  >
    <icon
      iconSize="m"
      onClick={[Function]}
      role="none"
    />
    <div
      className={
        BemNamingEntity {
          "entity": Object {
            "block": "features",
            "elem": "feature-text",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
    >
      Приоритетная поддержка
    </div>
  </div>
  <div
    className={
      BemNamingEntity {
        "entity": Object {
          "block": "features",
          "elem": "feature",
        },
        "entityMixes": Array [],
        "entityMods": Object {},
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
    key="disk-pro-feature-5"
  >
    <icon
      iconSize="m"
      onClick={[Function]}
      role="none"
    />
    <div
      className={
        BemNamingEntity {
          "entity": Object {
            "block": "features",
            "elem": "feature-text",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
    >
      Неограниченное скачивание с публичных ссылок
    </div>
  </div>
  <div
    className={
      BemNamingEntity {
        "entity": Object {
          "block": "features",
          "elem": "feature",
        },
        "entityMixes": Array [],
        "entityMods": Object {
          "with-ya-plus": undefined,
          "ya-plus": true,
        },
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
    key="ya-plus-feature-0"
  >
    <icon
      iconSize="m"
      onClick={[Function]}
      role="none"
    />
    <div
      className={
        BemNamingEntity {
          "entity": Object {
            "block": "features",
            "elem": "feature-text",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
    >
      <I18N
        className={
          BemNamingEntity {
            "entity": Object {
              "block": "ya-plus-feature",
            },
            "entityMixes": Array [],
            "entityMods": Object {},
            "naming": Object {
              "stringify": [Function],
            },
          }
        }
        loc="Подписка на Музыку, КиноПоиск, Такси и 0~другие сервисы Яндекса0~"
      >
        <span />
      </I18N>
    </div>
  </div>
</div>
`;

exports[`TuningPage Features Component should render features for non pro without ya plus tariff present 1`] = `
<div
  className={
    BemNamingEntity {
      "entity": Object {
        "block": "features",
      },
      "entityMixes": Array [
        undefined,
      ],
      "entityMods": Object {},
      "naming": Object {
        "stringify": [Function],
      },
    }
  }
>
  <div
    className={
      BemNamingEntity {
        "entity": Object {
          "block": "features",
          "elem": "feature",
        },
        "entityMixes": Array [],
        "entityMods": Object {},
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
    key="disk-pro-feature-0"
  >
    <icon
      iconSize="m"
      onClick={[Function]}
      role="none"
    />
    <div
      className={
        BemNamingEntity {
          "entity": Object {
            "block": "features",
            "elem": "feature-text",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
    >
      Безлимитная автозагрузка видео с телефона
    </div>
  </div>
  <div
    className={
      BemNamingEntity {
        "entity": Object {
          "block": "features",
          "elem": "feature",
        },
        "entityMixes": Array [],
        "entityMods": Object {},
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
    key="disk-pro-feature-1"
  >
    <icon
      iconSize="m"
      onClick={[Function]}
      role="none"
    />
    <div
      className={
        BemNamingEntity {
          "entity": Object {
            "block": "features",
            "elem": "feature-text",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
    >
      Расширенная история изменений файлов
    </div>
  </div>
  <div
    className={
      BemNamingEntity {
        "entity": Object {
          "block": "features",
          "elem": "feature",
        },
        "entityMixes": Array [],
        "entityMods": Object {},
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
    key="disk-pro-feature-2"
  >
    <icon
      iconSize="m"
      onClick={[Function]}
      role="none"
    />
    <div
      className={
        BemNamingEntity {
          "entity": Object {
            "block": "features",
            "elem": "feature-text",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
    >
      Без рекламы в Диске
    </div>
  </div>
  <div
    className={
      BemNamingEntity {
        "entity": Object {
          "block": "features",
          "elem": "feature",
        },
        "entityMixes": Array [],
        "entityMods": Object {},
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
    key="disk-pro-feature-3"
  >
    <icon
      iconSize="m"
      onClick={[Function]}
      role="none"
    />
    <div
      className={
        BemNamingEntity {
          "entity": Object {
            "block": "features",
            "elem": "feature-text",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
    >
      Автосохранение папок в программе для Windows
    </div>
  </div>
  <div
    className={
      BemNamingEntity {
        "entity": Object {
          "block": "features",
          "elem": "feature",
        },
        "entityMixes": Array [],
        "entityMods": Object {},
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
    key="disk-pro-feature-4"
  >
    <icon
      iconSize="m"
      onClick={[Function]}
      role="none"
    />
    <div
      className={
        BemNamingEntity {
          "entity": Object {
            "block": "features",
            "elem": "feature-text",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
    >
      Приоритетная поддержка
    </div>
  </div>
  <div
    className={
      BemNamingEntity {
        "entity": Object {
          "block": "features",
          "elem": "feature",
        },
        "entityMixes": Array [],
        "entityMods": Object {},
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
    key="disk-pro-feature-5"
  >
    <icon
      iconSize="m"
      onClick={[Function]}
      role="none"
    />
    <div
      className={
        BemNamingEntity {
          "entity": Object {
            "block": "features",
            "elem": "feature-text",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
    >
      Неограниченное скачивание с публичных ссылок
    </div>
  </div>
</div>
`;

exports[`TuningPage History Component should render two button-links to support for in app purchases 1`] = `
<div
  className={
    BemNamingEntity {
      "entity": Object {
        "block": "tuning-page-history",
      },
      "entityMixes": Array [],
      "entityMods": Object {},
      "naming": Object {
        "stringify": [Function],
      },
    }
  }
>
  <div
    className={
      BemNamingEntity {
        "entity": Object {
          "block": "tuning-page-history",
          "elem": "history-row",
        },
        "entityMixes": Array [],
        "entityMods": Object {},
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
    key="1tb_1y_2019_v41567091868"
  >
    <div
      className={
        BemNamingEntity {
          "entity": Object {
            "block": "tuning-page-history",
            "elem": "history-info",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
    >
      <div
        className={
          BemNamingEntity {
            "entity": Object {
              "block": "tuning-page-history",
              "elem": "history-title",
            },
            "entityMixes": Array [],
            "entityMods": Object {},
            "naming": Object {
              "stringify": [Function],
            },
          }
        }
      >
        + 1 Тб на год в Google Play
      </div>
      <div
        className={
          BemNamingEntity {
            "entity": Object {
              "block": "tuning-page-history",
              "elem": "history-date",
            },
            "entityMixes": Array [],
            "entityMods": Object {},
            "naming": Object {
              "stringify": [Function],
            },
          }
        }
      >
        до 29.08.2020
      </div>
      <div
        className={
          BemNamingEntity {
            "entity": Object {
              "block": "tuning-page-history",
              "elem": "history-space",
            },
            "entityMixes": Array [],
            "entityMods": Object {},
            "naming": Object {
              "stringify": [Function],
            },
          }
        }
      >
        1 ТБ
      </div>
    </div>
    <div
      className={
        BemNamingEntity {
          "entity": Object {
            "block": "tuning-page-history",
            "elem": "history-desc",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
    >
      <Button
        className={
          BemNamingEntity {
            "entity": Object {
              "block": "tuning-page-history",
              "elem": "history-desc-button",
            },
            "entityMixes": Array [],
            "entityMods": Object {},
            "naming": Object {
              "stringify": [Function],
            },
          }
        }
        onClick={[Function]}
        rel="noopener noreferrer"
        size="m"
        target="_blank"
        type="link"
        url="https://yandex.ru/support/disk-app-android/buy-space.html#manage"
        view="default"
      >
        Подробнее
      </Button>
    </div>
  </div>
  <div
    className={
      BemNamingEntity {
        "entity": Object {
          "block": "tuning-page-history",
          "elem": "history-row",
        },
        "entityMixes": Array [],
        "entityMods": Object {},
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
    key="100gb_1y_2019_v41567092144"
  >
    <div
      className={
        BemNamingEntity {
          "entity": Object {
            "block": "tuning-page-history",
            "elem": "history-info",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
    >
      <div
        className={
          BemNamingEntity {
            "entity": Object {
              "block": "tuning-page-history",
              "elem": "history-title",
            },
            "entityMixes": Array [],
            "entityMods": Object {},
            "naming": Object {
              "stringify": [Function],
            },
          }
        }
      >
        + 100 Гб на год в App Store
      </div>
      <div
        className={
          BemNamingEntity {
            "entity": Object {
              "block": "tuning-page-history",
              "elem": "history-date",
            },
            "entityMixes": Array [],
            "entityMods": Object {},
            "naming": Object {
              "stringify": [Function],
            },
          }
        }
      >
        до 29.08.2020
      </div>
      <div
        className={
          BemNamingEntity {
            "entity": Object {
              "block": "tuning-page-history",
              "elem": "history-space",
            },
            "entityMixes": Array [],
            "entityMods": Object {},
            "naming": Object {
              "stringify": [Function],
            },
          }
        }
      >
        100 ГБ
      </div>
    </div>
    <div
      className={
        BemNamingEntity {
          "entity": Object {
            "block": "tuning-page-history",
            "elem": "history-desc",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
    >
      <Button
        className={
          BemNamingEntity {
            "entity": Object {
              "block": "tuning-page-history",
              "elem": "history-desc-button",
            },
            "entityMixes": Array [],
            "entityMods": Object {},
            "naming": Object {
              "stringify": [Function],
            },
          }
        }
        onClick={[Function]}
        rel="noopener noreferrer"
        size="m"
        target="_blank"
        type="link"
        url="https://yandex.ru/support/disk-app-ios/buy-space.html#manage"
        view="default"
      >
        Подробнее
      </Button>
    </div>
  </div>
  <div
    className={
      BemNamingEntity {
        "entity": Object {
          "block": "tuning-page-history",
          "elem": "history-row",
        },
        "entityMixes": Array [],
        "entityMods": Object {},
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
    key="initial_10gb0"
  >
    <div
      className={
        BemNamingEntity {
          "entity": Object {
            "block": "tuning-page-history",
            "elem": "history-info",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
    >
      <div
        className={
          BemNamingEntity {
            "entity": Object {
              "block": "tuning-page-history",
              "elem": "history-title",
            },
            "entityMixes": Array [],
            "entityMods": Object {},
            "naming": Object {
              "stringify": [Function],
            },
          }
        }
      >
        За регистрацию Диска
      </div>
      <div
        className={
          BemNamingEntity {
            "entity": Object {
              "block": "tuning-page-history",
              "elem": "history-date",
            },
            "entityMixes": Array [],
            "entityMods": Object {},
            "naming": Object {
              "stringify": [Function],
            },
          }
        }
      >
        навсегда
      </div>
      <div
        className={
          BemNamingEntity {
            "entity": Object {
              "block": "tuning-page-history",
              "elem": "history-space",
            },
            "entityMixes": Array [],
            "entityMods": Object {},
            "naming": Object {
              "stringify": [Function],
            },
          }
        }
      >
        10 ГБ
      </div>
    </div>
    <div
      className={
        BemNamingEntity {
          "entity": Object {
            "block": "tuning-page-history",
            "elem": "history-desc",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
    />
  </div>
</div>
`;

exports[`TuningPage Tariff Component should render Tariff component for tariff #1 for a user with pro disabled 1`] = `
<div
  className={
    BemNamingEntity {
      "entity": Object {
        "block": "tariff",
        "elem": "wrapper",
      },
      "entityMixes": Array [],
      "entityMods": Object {
        "hovered": false,
      },
      "naming": Object {
        "stringify": [Function],
      },
    }
  }
>
  <div
    className={
      BemNamingEntity {
        "entity": Object {
          "block": "tariff",
        },
        "entityMixes": Array [],
        "entityMods": Object {
          "best-offer": undefined,
          "pro-enabled": false,
          "with-ya-plus": undefined,
        },
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
  >
    <AvailableSpace
      cls={
        BemNamingEntity {
          "entity": Object {
            "block": "tariff",
            "elem": "indicator-bar",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
      percentageOfUsed={48.22201049459086}
      textLeft="Сейчас 93,1 ГБ"
      textRight="Будет 193 ГБ"
      title={null}
    />
    <span
      className={
        BemNamingEntity {
          "entity": Object {
            "block": "tariff",
            "elem": "size",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
    >
      +100 ГБ
    </span>
    <DiscountBadge
      tariff={
        Object {
          "currency": "RUB",
          "discount": Object {
            "percentage": 30,
          },
          "display_space": 100,
          "display_space_units": "ГБ",
          "periods": Object {
            "month": Object {
              "price": 99,
              "product_id": "100gb_1m_2019_v4_discount_30",
            },
            "year": Object {
              "price": 984,
              "product_id": "100gb_1y_2019_v4_discount_30",
            },
          },
          "space": 107374182400,
        }
      }
    />
    <BuyButton
      diskThreeTariffsExperiment={true}
      onClick={[Function]}
      tariff={
        Object {
          "currency": "RUB",
          "discount": Object {
            "percentage": 30,
          },
          "display_space": 100,
          "display_space_units": "ГБ",
          "periods": Object {
            "month": Object {
              "price": 99,
              "product_id": "100gb_1m_2019_v4_discount_30",
            },
            "year": Object {
              "price": 984,
              "product_id": "100gb_1y_2019_v4_discount_30",
            },
          },
          "space": 107374182400,
        }
      }
    />
    <BuyLink
      onClick={[Function]}
      tariff={
        Object {
          "currency": "RUB",
          "discount": Object {
            "percentage": 30,
          },
          "display_space": 100,
          "display_space_units": "ГБ",
          "periods": Object {
            "month": Object {
              "price": 99,
              "product_id": "100gb_1m_2019_v4_discount_30",
            },
            "year": Object {
              "price": 984,
              "product_id": "100gb_1y_2019_v4_discount_30",
            },
          },
          "space": 107374182400,
        }
      }
    />
  </div>
  <Connect(Features)
    cls={
      BemNamingEntity {
        "entity": Object {
          "block": "tariff",
          "elem": "features",
        },
        "entityMixes": Array [],
        "entityMods": Object {},
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
    isTariffFeatures={true}
    onTooltipToggle={[Function]}
    showTooltip={true}
  />
</div>
`;

exports[`TuningPage Tariff Component should render Tariff component for tariff #1 for a user with pro enabled 1`] = `
<div
  className={
    BemNamingEntity {
      "entity": Object {
        "block": "tariff",
        "elem": "wrapper",
      },
      "entityMixes": Array [],
      "entityMods": Object {
        "hovered": false,
      },
      "naming": Object {
        "stringify": [Function],
      },
    }
  }
>
  <div
    className={
      BemNamingEntity {
        "entity": Object {
          "block": "tariff",
        },
        "entityMixes": Array [],
        "entityMods": Object {
          "best-offer": undefined,
          "pro-enabled": true,
          "with-ya-plus": undefined,
        },
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
  >
    <AvailableSpace
      cls={
        BemNamingEntity {
          "entity": Object {
            "block": "tariff",
            "elem": "indicator-bar",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
      percentageOfUsed={48.22201049459086}
      textLeft="Сейчас 93,1 ГБ"
      textRight="Будет 193 ГБ"
      title={null}
    />
    <span
      className={
        BemNamingEntity {
          "entity": Object {
            "block": "tariff",
            "elem": "size",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
    >
      +100 ГБ
    </span>
    <DiscountBadge
      tariff={
        Object {
          "currency": "RUB",
          "discount": Object {
            "percentage": 30,
          },
          "display_space": 100,
          "display_space_units": "ГБ",
          "periods": Object {
            "month": Object {
              "price": 99,
              "product_id": "100gb_1m_2019_v4_discount_30",
            },
            "year": Object {
              "price": 984,
              "product_id": "100gb_1y_2019_v4_discount_30",
            },
          },
          "space": 107374182400,
        }
      }
    />
    <BuyButton
      diskThreeTariffsExperiment={true}
      onClick={[Function]}
      tariff={
        Object {
          "currency": "RUB",
          "discount": Object {
            "percentage": 30,
          },
          "display_space": 100,
          "display_space_units": "ГБ",
          "periods": Object {
            "month": Object {
              "price": 99,
              "product_id": "100gb_1m_2019_v4_discount_30",
            },
            "year": Object {
              "price": 984,
              "product_id": "100gb_1y_2019_v4_discount_30",
            },
          },
          "space": 107374182400,
        }
      }
    />
    <BuyLink
      onClick={[Function]}
      tariff={
        Object {
          "currency": "RUB",
          "discount": Object {
            "percentage": 30,
          },
          "display_space": 100,
          "display_space_units": "ГБ",
          "periods": Object {
            "month": Object {
              "price": 99,
              "product_id": "100gb_1m_2019_v4_discount_30",
            },
            "year": Object {
              "price": 984,
              "product_id": "100gb_1y_2019_v4_discount_30",
            },
          },
          "space": 107374182400,
        }
      }
    />
  </div>
  <Connect(Features)
    cls={
      BemNamingEntity {
        "entity": Object {
          "block": "tariff",
          "elem": "features",
        },
        "entityMixes": Array [],
        "entityMods": Object {},
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
    isTariffFeatures={true}
    onTooltipToggle={[Function]}
    showTooltip={true}
  />
</div>
`;

exports[`TuningPage Tariff Component should render Tariff component for tariff #2 for a user with pro disabled 1`] = `
<div
  className={
    BemNamingEntity {
      "entity": Object {
        "block": "tariff",
        "elem": "wrapper",
      },
      "entityMixes": Array [],
      "entityMods": Object {
        "hovered": false,
      },
      "naming": Object {
        "stringify": [Function],
      },
    }
  }
>
  <div
    className={
      BemNamingEntity {
        "entity": Object {
          "block": "tariff",
        },
        "entityMixes": Array [],
        "entityMods": Object {
          "best-offer": true,
          "pro-enabled": false,
          "with-ya-plus": undefined,
        },
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
  >
    <AvailableSpace
      cls={
        BemNamingEntity {
          "entity": Object {
            "block": "tariff",
            "elem": "indicator-bar",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
      percentageOfUsed={8.336726187924397}
      textLeft="Сейчас 93,1 ГБ"
      textRight="Будет 1,09 ТБ"
      title={null}
    />
    <span
      className={
        BemNamingEntity {
          "entity": Object {
            "block": "tariff",
            "elem": "size",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
    >
      +1 ТБ
    </span>
    <DiscountBadge
      tariff={
        Object {
          "currency": "RUB",
          "discount": Object {
            "percentage": 30,
          },
          "display_space": 1,
          "display_space_units": "ТБ",
          "is_best_offer": true,
          "periods": Object {
            "month": Object {
              "price": 210,
              "product_id": "1tb_1m_2019_v4_discount_30",
            },
            "year": Object {
              "price": 1750,
              "product_id": "1tb_1y_2019_v4_discount_30",
            },
          },
          "space": 1099511627776,
        }
      }
    />
    <BuyButton
      diskThreeTariffsExperiment={true}
      onClick={[Function]}
      tariff={
        Object {
          "currency": "RUB",
          "discount": Object {
            "percentage": 30,
          },
          "display_space": 1,
          "display_space_units": "ТБ",
          "is_best_offer": true,
          "periods": Object {
            "month": Object {
              "price": 210,
              "product_id": "1tb_1m_2019_v4_discount_30",
            },
            "year": Object {
              "price": 1750,
              "product_id": "1tb_1y_2019_v4_discount_30",
            },
          },
          "space": 1099511627776,
        }
      }
    />
    <BuyLink
      onClick={[Function]}
      tariff={
        Object {
          "currency": "RUB",
          "discount": Object {
            "percentage": 30,
          },
          "display_space": 1,
          "display_space_units": "ТБ",
          "is_best_offer": true,
          "periods": Object {
            "month": Object {
              "price": 210,
              "product_id": "1tb_1m_2019_v4_discount_30",
            },
            "year": Object {
              "price": 1750,
              "product_id": "1tb_1y_2019_v4_discount_30",
            },
          },
          "space": 1099511627776,
        }
      }
    />
  </div>
  <Connect(Features)
    cls={
      BemNamingEntity {
        "entity": Object {
          "block": "tariff",
          "elem": "features",
        },
        "entityMixes": Array [],
        "entityMods": Object {},
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
    isTariffFeatures={true}
    onTooltipToggle={[Function]}
    showTooltip={true}
  />
</div>
`;

exports[`TuningPage Tariff Component should render Tariff component for tariff #2 for a user with pro enabled 1`] = `
<div
  className={
    BemNamingEntity {
      "entity": Object {
        "block": "tariff",
        "elem": "wrapper",
      },
      "entityMixes": Array [],
      "entityMods": Object {
        "hovered": false,
      },
      "naming": Object {
        "stringify": [Function],
      },
    }
  }
>
  <div
    className={
      BemNamingEntity {
        "entity": Object {
          "block": "tariff",
        },
        "entityMixes": Array [],
        "entityMods": Object {
          "best-offer": true,
          "pro-enabled": true,
          "with-ya-plus": undefined,
        },
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
  >
    <AvailableSpace
      cls={
        BemNamingEntity {
          "entity": Object {
            "block": "tariff",
            "elem": "indicator-bar",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
      percentageOfUsed={8.336726187924397}
      textLeft="Сейчас 93,1 ГБ"
      textRight="Будет 1,09 ТБ"
      title={null}
    />
    <span
      className={
        BemNamingEntity {
          "entity": Object {
            "block": "tariff",
            "elem": "size",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
    >
      +1 ТБ
    </span>
    <DiscountBadge
      tariff={
        Object {
          "currency": "RUB",
          "discount": Object {
            "percentage": 30,
          },
          "display_space": 1,
          "display_space_units": "ТБ",
          "is_best_offer": true,
          "periods": Object {
            "month": Object {
              "price": 210,
              "product_id": "1tb_1m_2019_v4_discount_30",
            },
            "year": Object {
              "price": 1750,
              "product_id": "1tb_1y_2019_v4_discount_30",
            },
          },
          "space": 1099511627776,
        }
      }
    />
    <BuyButton
      diskThreeTariffsExperiment={true}
      onClick={[Function]}
      tariff={
        Object {
          "currency": "RUB",
          "discount": Object {
            "percentage": 30,
          },
          "display_space": 1,
          "display_space_units": "ТБ",
          "is_best_offer": true,
          "periods": Object {
            "month": Object {
              "price": 210,
              "product_id": "1tb_1m_2019_v4_discount_30",
            },
            "year": Object {
              "price": 1750,
              "product_id": "1tb_1y_2019_v4_discount_30",
            },
          },
          "space": 1099511627776,
        }
      }
    />
    <BuyLink
      onClick={[Function]}
      tariff={
        Object {
          "currency": "RUB",
          "discount": Object {
            "percentage": 30,
          },
          "display_space": 1,
          "display_space_units": "ТБ",
          "is_best_offer": true,
          "periods": Object {
            "month": Object {
              "price": 210,
              "product_id": "1tb_1m_2019_v4_discount_30",
            },
            "year": Object {
              "price": 1750,
              "product_id": "1tb_1y_2019_v4_discount_30",
            },
          },
          "space": 1099511627776,
        }
      }
    />
  </div>
  <Connect(Features)
    cls={
      BemNamingEntity {
        "entity": Object {
          "block": "tariff",
          "elem": "features",
        },
        "entityMixes": Array [],
        "entityMods": Object {},
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
    isTariffFeatures={true}
    onTooltipToggle={[Function]}
    showTooltip={true}
  />
</div>
`;

exports[`TuningPage Tariff Component should render Tariff component for tariff #3 for a user with pro disabled 1`] = `
<div
  className={
    BemNamingEntity {
      "entity": Object {
        "block": "tariff",
        "elem": "wrapper",
      },
      "entityMixes": Array [],
      "entityMods": Object {
        "hovered": false,
      },
      "naming": Object {
        "stringify": [Function],
      },
    }
  }
>
  <div
    className={
      BemNamingEntity {
        "entity": Object {
          "block": "tariff",
        },
        "entityMixes": Array [],
        "entityMods": Object {
          "best-offer": undefined,
          "pro-enabled": false,
          "with-ya-plus": true,
        },
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
  >
    <AvailableSpace
      cls={
        BemNamingEntity {
          "entity": Object {
            "block": "tariff",
            "elem": "indicator-bar",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
      percentageOfUsed={8.336726187924397}
      textLeft="Сейчас 93,1 ГБ"
      textRight="Будет 1,09 ТБ"
      title={null}
    />
    <span
      className={
        BemNamingEntity {
          "entity": Object {
            "block": "tariff",
            "elem": "size",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
      data-subtitle="и Яндекс.Плюс"
    >
      +3 ТБ
    </span>
    <BuyButton
      diskThreeTariffsExperiment={true}
      onClick={[Function]}
      tariff={
        Object {
          "currency": "RUB",
          "discount": Object {
            "percentage": 30,
          },
          "display_space": 3,
          "display_space_units": "ТБ",
          "is_yandex_plus": true,
          "periods": Object {
            "month": Object {
              "price": 750,
              "product_id": "1tb_1m_2019_v4_discount_30",
            },
            "year": Object {
              "price": 5244,
              "product_id": "1tb_1y_2019_v4_discount_30",
            },
          },
          "space": 1099511627776,
        }
      }
    />
    <BuyLink
      onClick={[Function]}
      tariff={
        Object {
          "currency": "RUB",
          "discount": Object {
            "percentage": 30,
          },
          "display_space": 3,
          "display_space_units": "ТБ",
          "is_yandex_plus": true,
          "periods": Object {
            "month": Object {
              "price": 750,
              "product_id": "1tb_1m_2019_v4_discount_30",
            },
            "year": Object {
              "price": 5244,
              "product_id": "1tb_1y_2019_v4_discount_30",
            },
          },
          "space": 1099511627776,
        }
      }
    />
  </div>
  <Connect(Features)
    cls={
      BemNamingEntity {
        "entity": Object {
          "block": "tariff",
          "elem": "features",
        },
        "entityMixes": Array [],
        "entityMods": Object {},
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
    isTariffFeatures={true}
    onTooltipToggle={[Function]}
    showTooltip={true}
    withYaPlus={true}
  />
</div>
`;

exports[`TuningPage Tariff Component should render Tariff component for tariff #3 for a user with pro enabled 1`] = `
<div
  className={
    BemNamingEntity {
      "entity": Object {
        "block": "tariff",
        "elem": "wrapper",
      },
      "entityMixes": Array [],
      "entityMods": Object {
        "hovered": false,
      },
      "naming": Object {
        "stringify": [Function],
      },
    }
  }
>
  <div
    className={
      BemNamingEntity {
        "entity": Object {
          "block": "tariff",
        },
        "entityMixes": Array [],
        "entityMods": Object {
          "best-offer": undefined,
          "pro-enabled": true,
          "with-ya-plus": true,
        },
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
  >
    <AvailableSpace
      cls={
        BemNamingEntity {
          "entity": Object {
            "block": "tariff",
            "elem": "indicator-bar",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
      percentageOfUsed={8.336726187924397}
      textLeft="Сейчас 93,1 ГБ"
      textRight="Будет 1,09 ТБ"
      title={null}
    />
    <span
      className={
        BemNamingEntity {
          "entity": Object {
            "block": "tariff",
            "elem": "size",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
      data-subtitle="и Яндекс.Плюс"
    >
      +3 ТБ
    </span>
    <BuyButton
      diskThreeTariffsExperiment={true}
      onClick={[Function]}
      tariff={
        Object {
          "currency": "RUB",
          "discount": Object {
            "percentage": 30,
          },
          "display_space": 3,
          "display_space_units": "ТБ",
          "is_yandex_plus": true,
          "periods": Object {
            "month": Object {
              "price": 750,
              "product_id": "1tb_1m_2019_v4_discount_30",
            },
            "year": Object {
              "price": 5244,
              "product_id": "1tb_1y_2019_v4_discount_30",
            },
          },
          "space": 1099511627776,
        }
      }
    />
    <BuyLink
      onClick={[Function]}
      tariff={
        Object {
          "currency": "RUB",
          "discount": Object {
            "percentage": 30,
          },
          "display_space": 3,
          "display_space_units": "ТБ",
          "is_yandex_plus": true,
          "periods": Object {
            "month": Object {
              "price": 750,
              "product_id": "1tb_1m_2019_v4_discount_30",
            },
            "year": Object {
              "price": 5244,
              "product_id": "1tb_1y_2019_v4_discount_30",
            },
          },
          "space": 1099511627776,
        }
      }
    />
  </div>
  <Connect(Features)
    cls={
      BemNamingEntity {
        "entity": Object {
          "block": "tariff",
          "elem": "features",
        },
        "entityMixes": Array [],
        "entityMods": Object {},
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
    isTariffFeatures={true}
    onTooltipToggle={[Function]}
    showTooltip={true}
    withYaPlus={true}
  />
</div>
`;

exports[`TuningPage Title Component should render Title for a non pro user with ya plus with a limited discount 1`] = `
<div
  className={
    BemNamingEntity {
      "entity": Object {
        "block": "tuning-page-title",
      },
      "entityMixes": Array [],
      "entityMods": Object {
        "discount": true,
        "pro": false,
      },
      "naming": Object {
        "stringify": [Function],
      },
    }
  }
>
  Купите подписку Диск Про
  <div
    className={
      BemNamingEntity {
        "entity": Object {
          "block": "tuning-page-title",
          "elem": "discount-title-badge-wrapper",
        },
        "entityMixes": Array [],
        "entityMods": Object {},
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
  >
    <div
      className={
        BemNamingEntity {
          "entity": Object {
            "block": "tuning-page-title",
            "elem": "discount-title-badge",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
    >
      До 08:16 25 ноября со скидкой
      <div
        className={
          BemNamingEntity {
            "entity": Object {
              "block": "tuning-page-title",
              "elem": "title-badge-tail-wrapper",
            },
            "entityMixes": Array [],
            "entityMods": Object {},
            "naming": Object {
              "stringify": [Function],
            },
          }
        }
      >
        <div
          className={
            BemNamingEntity {
              "entity": Object {
                "block": "tuning-page-title",
                "elem": "title-badge-tail",
              },
              "entityMixes": Array [],
              "entityMods": Object {},
              "naming": Object {
                "stringify": [Function],
              },
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TuningPage Title Component should render Title for a non pro user with ya plus with discount 1`] = `
<div
  className={
    BemNamingEntity {
      "entity": Object {
        "block": "tuning-page-title",
      },
      "entityMixes": Array [],
      "entityMods": Object {
        "discount": true,
        "pro": false,
      },
      "naming": Object {
        "stringify": [Function],
      },
    }
  }
>
  Купите подписку Диск Про
  <div
    className={
      BemNamingEntity {
        "entity": Object {
          "block": "tuning-page-title",
          "elem": "discount-title-badge-wrapper",
        },
        "entityMixes": Array [],
        "entityMods": Object {},
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
  >
    <div
      className={
        BemNamingEntity {
          "entity": Object {
            "block": "tuning-page-title",
            "elem": "discount-title-badge",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
    >
      Со скидкой по подписке Яндекс.Плюс
      <div
        className={
          BemNamingEntity {
            "entity": Object {
              "block": "tuning-page-title",
              "elem": "title-badge-tail-wrapper",
            },
            "entityMixes": Array [],
            "entityMods": Object {},
            "naming": Object {
              "stringify": [Function],
            },
          }
        }
      >
        <div
          className={
            BemNamingEntity {
              "entity": Object {
                "block": "tuning-page-title",
                "elem": "title-badge-tail",
              },
              "entityMixes": Array [],
              "entityMods": Object {},
              "naming": Object {
                "stringify": [Function],
              },
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TuningPage Title Component should render Title for a non pro user without ya plus with discount 1`] = `
<div
  className={
    BemNamingEntity {
      "entity": Object {
        "block": "tuning-page-title",
      },
      "entityMixes": Array [],
      "entityMods": Object {
        "discount": true,
        "pro": false,
      },
      "naming": Object {
        "stringify": [Function],
      },
    }
  }
>
  Купите подписку Диск Про
  <div
    className={
      BemNamingEntity {
        "entity": Object {
          "block": "tuning-page-title",
          "elem": "discount-title-badge-wrapper",
        },
        "entityMixes": Array [],
        "entityMods": Object {},
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
  >
    <div
      className={
        BemNamingEntity {
          "entity": Object {
            "block": "tuning-page-title",
            "elem": "discount-title-badge",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
    >
      Сейчас со скидкой
      <div
        className={
          BemNamingEntity {
            "entity": Object {
              "block": "tuning-page-title",
              "elem": "title-badge-tail-wrapper",
            },
            "entityMixes": Array [],
            "entityMods": Object {},
            "naming": Object {
              "stringify": [Function],
            },
          }
        }
      >
        <div
          className={
            BemNamingEntity {
              "entity": Object {
                "block": "tuning-page-title",
                "elem": "title-badge-tail",
              },
              "entityMixes": Array [],
              "entityMods": Object {},
              "naming": Object {
                "stringify": [Function],
              },
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TuningPage Title Component should render Title for a pro user without ya plus and no discount 1`] = `
<div
  className={
    BemNamingEntity {
      "entity": Object {
        "block": "tuning-page-title",
      },
      "entityMixes": Array [],
      "entityMods": Object {
        "discount": false,
        "pro": true,
      },
      "naming": Object {
        "stringify": [Function],
      },
    }
  }
>
  Диск Про
</div>
`;

exports[`TuningPage Title Component should render Title for non pro user without ya plus and no discount 1`] = `
<div
  className={
    BemNamingEntity {
      "entity": Object {
        "block": "tuning-page-title",
      },
      "entityMixes": Array [],
      "entityMods": Object {
        "discount": false,
        "pro": false,
      },
      "naming": Object {
        "stringify": [Function],
      },
    }
  }
>
  Купите подписку Диск Про
</div>
`;

exports[`TuningPage TuningPage Component should display LoaderOrError Component if is error 1`] = `
<LoaderOrError
  isError={true}
/>
`;

exports[`TuningPage TuningPage Component should display LoaderOrError Component if is loading 1`] = `
<LoaderOrError
  isError={false}
/>
`;

exports[`TuningPage TuningPage Component should render tuning page for a non pro user 1`] = `
<section
  className={
    BemNamingEntity {
      "entity": Object {
        "block": "tuning-page",
      },
      "entityMixes": Array [],
      "entityMods": Object {
        "has-header-links": undefined,
      },
      "naming": Object {
        "stringify": [Function],
      },
    }
  }
>
  <TuningHeader />
  <div
    className={
      BemNamingEntity {
        "entity": Object {
          "block": "tuning-page",
          "elem": "body",
        },
        "entityMixes": Array [],
        "entityMods": Object {},
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
  >
    <Connect(Title) />
    <Connect(Features)
      iconSize="l"
    />
    <Connect(TariffContainer) />
    <AvailableSpace
      percentageOfUsed={0}
      textLeft="Занято 0 байт"
      textRight="Свободно 100 байт"
      title={
        <TuningPageSubtitle
          text="Доступное место 100 байт"
        />
      }
    />
    <Connect(TuningPageHistory) />
    <Connect(TuningPagePromo) />
  </div>
  <Connect(Footer) />
  <Connect(Dialogs)
    components={
      Object {
        "payment": [Function],
        "paymentCancel": [Function],
        "paymentIncorrectTariff": [Function],
        "paymentMessage": [Function],
        "paymentSuccess": [Function],
        "promo": [Function],
      }
    }
  />
</section>
`;

exports[`TuningPage TuningPage Component should render tuning page for a pro user 1`] = `
<section
  className={
    BemNamingEntity {
      "entity": Object {
        "block": "tuning-page",
      },
      "entityMixes": Array [],
      "entityMods": Object {
        "has-header-links": undefined,
      },
      "naming": Object {
        "stringify": [Function],
      },
    }
  }
>
  <TuningHeader />
  <div
    className={
      BemNamingEntity {
        "entity": Object {
          "block": "tuning-page",
          "elem": "body",
        },
        "entityMixes": Array [],
        "entityMods": Object {},
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
  >
    <Connect(Title) />
    <Connect(Features)
      iconSize="l"
    />
    <TuningPageSubtitle
      text="Купить еще место"
    />
    <Connect(TariffContainer) />
    <AvailableSpace
      percentageOfUsed={0}
      textLeft="Занято 0 байт"
      textRight="Свободно 100 байт"
      title={
        <TuningPageSubtitle
          text="Доступное место 100 байт"
        />
      }
    />
    <Connect(TuningPageHistory) />
    <Connect(TuningPagePromo) />
  </div>
  <Connect(Footer) />
  <Connect(Dialogs)
    components={
      Object {
        "payment": [Function],
        "paymentCancel": [Function],
        "paymentIncorrectTariff": [Function],
        "paymentMessage": [Function],
        "paymentSuccess": [Function],
        "promo": [Function],
      }
    }
  />
</section>
`;
